--- a/admin/package.json
+++ b/admin/package.json
@@ -24,8 +24,9 @@
     "react-icons": "^5.3.0",
     "react-inner-image-zoom": "^3.0.2",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-slick": "^0.30.2",
     "react-top-loading-bar": "^2.3.1",
     "slick-carousel": "^1.8.1"
