--- a/admin/package.json
+++ b/admin/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^6.0.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-google-charts": "^5.1.0",
     "react-icons": "^5.3.0",
     "react-inner-image-zoom": "^3.0.2",
