--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.0.2",
+    "@mui/material": "^6.4.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -23,6 +23,7 @@
     "react-icons": "^5.4.0",
     "react-inner-image-zoom": "^3.0.2",
     "react-router-dom": "^6.26.2",
+    "react-share": "^5.2.0",
     "react-slick": "^0.30.2",
     "react-top-loading-bar": "^2.3.1",
     "slick-carousel": "^1.8.1"
