--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -19,9 +19,11 @@
     "@mui/material": "^6.4.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-inner-image-zoom": "^3.0.2",
